--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -37,10 +37,14 @@
                                     </div>
 
                                     <div class="form-group">
+                                        <input type="text" placeholder="roles filter" (keyup)="filter($event)"  id="">
+                                    </div>
+
+                                    <div class="form-group">
                                        <select formControlName="role" class="form-control" >
                                         <option value=""> Choose a role </option>
-                                        <option value="PROGRAM_DIRECTOR"> Program director </option>
-                                        <option value="NINJA"> Ninja </option>
+                                        <option *ngFor="let r of filtredroles" value="{{r.id}}"> {{r.value}}</option>
+                                        
                                            
                                        </select>
                                     </div>
